--- a/.gitignore
+++ b/.gitignore
@@ -21,24 +21,22 @@ wheels/
 *.egg
 
 # Virtual Environment
-venv/
-ENV/
-env/
 .venv/
 
 # IDE
-.idea/
 .vscode/
-*.swp
-*.swo
-*~
 
 # Config (用户自定义配置不应提交)
-# config.json
+config.json
+config.json.bak
 
 # Logs
 *.log
 logs/
+
+# Data (运行时数据)
+data/*.json
+data/logs/
 
 # OS
 .DS_Store
