feat(db): introduce mandatory database encryption and a new init process
To bolster security, all data persisted in the application's SQLite database is now encrypted at rest. This change protects sensitive data, such as provider credentials, which are now stored in the database instead of the static configuration file.

This introduces a new, required setup procedure:
- A `db_encryption_key` must be present in `config.json`. A new helper script, `scripts/gen_fernet_key.py`, is provided to generate this key.
- A new initialization script, `scripts/init_db.py`, must be run once to prepare the encrypted database schemas before the first launch.

BREAKING CHANGE: The `providers` array has been removed from `config.json`. Provider configurations are now stored in the database and managed dynamically.

BREAKING CHANGE: A `db_encryption_key` must be configured and the database must be initialized with `scripts/init_db.py` before the application can be run.

--- a/config.example.json
+++ b/config.example.json
@@ -3,27 +3,5 @@
   "server_host": "0.0.0.0",
   "max_retries": 3,
   "request_timeout": 120,
-  "providers": [
-    {
-      "name": "Provider_A",
-      "base_url": "https://api.example-a.com/v1",
-      "api_key": "sk-your-api-key-here",
-      "weight": 10,
-      "timeout": 60
-    },
-    {
-      "name": "Provider_B",
-      "base_url": "https://api.example-b.com/v1",
-      "api_key": "sk-another-api-key",
-      "weight": 5,
-      "timeout": 90
-    },
-    {
-      "name": "Provider_C_Backup",
-      "base_url": "https://api.backup-site.com/v1",
-      "api_key": "sk-backup-key",
-      "weight": 1,
-      "timeout": 120
-    }
-  ]
+  "db_encryption_key": "请使用 python scripts/gen_fernet_key.py 生成密钥并粘贴到此处"
 }
