refactor(config): move sensitive config to environment variables
BREAKING CHANGE: db_encryption_key must now be set via AI_ROUTER_ENCRYPTION_KEY environment variable

- Move db_encryption_key from config.json to environment variable
- Add configurable settings to config.json: timezone_offset, log_retention_days, cooldown, auth
- Remove deprecated constants from constants.py (moved to config.json)
- Update all code references to use get_config() for dynamic configuration
- Update README.md with new configuration documentation
- Update error messages to reference environment variable

--- a/config.example.json
+++ b/config.example.json
@@ -2,5 +2,16 @@
   "server_port": 8000,
   "server_host": "0.0.0.0",
   "request_timeout": 120,
-  "db_encryption_key": "请使用 python scripts/gen_fernet_key.py 生成密钥并粘贴到此处"
+  "timezone_offset": 8,
+  "log_retention_days": 15,
+  "cooldown": {
+    "rate_limited": 180,
+    "server_error": 600,
+    "timeout": 300,
+    "network_error": 120
+  },
+  "auth": {
+    "token_expire_hours": 6,
+    "lockout_duration_seconds": 900
+  }
 }
