feat(breaker): add exponential backoff for cooldown
Consecutive failures increase cooldown duration exponentially:
- cooldown = base_cooldown * (base_multiplier ^ (failures - 1))
- Capped at max_multiplier (default 16x)
- Reset on successful request or manual reset

Config options:
- exponential_backoff.base_multiplier (default 2.0)
- exponential_backoff.max_multiplier (default 16.0, set to 1.0 to disable)

--- a/config.example.json
+++ b/config.example.json
@@ -10,6 +10,10 @@
     "timeout": 300,
     "network_error": 120
   },
+  "exponential_backoff": {
+    "base_multiplier": 2.0,
+    "max_multiplier": 16.0
+  },
   "auth": {
     "token_expire_hours": 6,
     "lockout_duration_seconds": 900
